--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,40 @@
 
 	<groupId>com.github.bogdanovmn.projecteuler.framework</groupId>
 	<artifactId>project-euler-framework</artifactId>
-	<version>0.5.0</version>
+	<version>0.5.1</version>
+
+	<name>Project Euler Framework</name>
+	<description>This is a lite framework for solving of math problems of "Project Euler" (https://projecteuler.net)</description>
+	<url>http://github.com/${git.id}</url>
 
 	<properties>
 		<encoding>UTF-8</encoding>
 		<java.version>1.8</java.version>
+		<git.id>bogdanovmn/project-euler-framework</git.id>
 	</properties>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Mikhail N Bogdanov</name>
+			<email>bogdanovmn@gmail.com</email>
+			<organization>Open source</organization>
+			<organizationUrl>http://github.com/bogdanovmn/</organizationUrl>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git://github.com/${git.id}.git</connection>
+		<developerConnection>scm:git:ssh://github.com:${git.id}.git</developerConnection>
+		<url>http://github.com/${git.id}</url>
+	</scm>
 
 	<dependencies>
 		<dependency>
@@ -37,7 +65,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.1</version>
 				<configuration>
 					<encoding>${encoding}</encoding>
 					<source>${java.version}</source>
@@ -49,21 +77,86 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<encoding>${encoding}</encoding>
+							<source>${java.version}</source>
+							<target>${java.version}</target>
+							<testSource>${java.version}</testSource>
+							<testTarget>${java.version}</testTarget>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.8</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.2.0</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
 		<repository>
-			<id>bintray-repo-maven</id>
-			<url>https://api.bintray.com/maven/bogdanovmn/maven-repo/project-euler-framework/;publish=1</url>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
-
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<id>my</id>
-			<name>bintray</name>
-			<url>https://dl.bintray.com/bogdanovmn/maven-repo</url>
-		</repository>
-	</repositories>
 </project>
